--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header class="py-3 flex justify-between items-center px-5 md:px-[5vw] border-b border-gray-300 dark:border-gray-800">
     <!-- left -->
     <div class="flex space-x-2 justify-center items-center">
-      <img src="./images/logo.png" alt="logo" class="w-12">
-      <h3 class="text-2xl font-bold text-violet-600">My Notes</h3>
+      <img src="./images/logo.png" alt="logo" class="w-18">
+      <h3 class="text-5xl font-bold text-violet-600">my notes</h3>
     </div>
     <!-- right -->
     <div class="flex space-x-5">
