--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
   <header class="py-3 flex justify-between items-center px-5 md:px-[5vw] border-b border-gray-300 dark:border-gray-800">
     <!-- left -->
     <div class="flex space-x-2 justify-center items-center">
-      <img src="./images/logo.png" alt="logo" class="w-12 md:w-18">
-      <h3 class="text-2xl md:text-5xl font-bold text-violet-600">my notes</h3>
+      <img src="./images/logo.png" alt="logo" class="w-10 sm:w-12">
+      <h3 class="text-xl sm:text-2xl font-bold text-violet-600">my notes</h3>
     </div>
     <!-- right -->
     <div class="flex space-x-5">
       <div class="flex-col text-center justify-items-center">
         <button type="button" id="create-note-btn" title="add note"
-          class="bg-violet-600 cursor-pointer hover:brightness-110 active:scale-95 transition-all duration-300 text-white rounded-full max-sm:w-12 max-sm:h-12  w-15 h-15 shadow">
-          <span class="text-4xl font-extrabold mb-2 flex justify-center">+</span>
+          class="bg-violet-600 cursor-pointer hover:brightness-110 active:scale-95 transition-all duration-300 text-white rounded-full w-10 h-10 sm:w-12 sm:h-12 shadow">
+          <span class="text-3xl sm:text-4xl font-extrabold mb-2 flex justify-center">+</span>
         </button>
-        <p class="font-semibold max-sm:hidden">Add note</p>
+        <!-- <p class="font-semibold max-sm:hidden">Add note</p> -->
       </div>
 
       <!-- toggle btn -->
-      <div class="flex-col justify-items-center">
-        <div class="flex justify-center items-center max-sm:h-12 max-sm:w-12 h-15 w-15 rounded-full">
+      <div class="flex-col justify-items-center" title="theme">
+        <div class="flex justify-center items-center h-10 w-10 sm:h-12 sm:w-12 rounded-full">
           <label for="theme-toggle-btn" class="flex justify-center items-center cursor-pointer">
             <input type="checkbox" value="" id="theme-toggle-btn" class="hidden">
             <!-- sun -->
@@ -110,7 +110,7 @@
             </div>
           </label>
         </div>
-        <p class="font-semibold  max-sm:hidden">Mode</p>
+        <!-- <p class="font-semibold  max-sm:hidden">Mode</p> -->
       </div>
     </div>
   </header>
@@ -148,13 +148,13 @@
   <div class="mx-5 lg:mx-[5vw] my-10 flex justify-center items-center gap-4" id="no-notes-div">
     <div class="text-center flex-col justify-items-center space-y-4">
       <button type="button" id="create-note-btn-2" title="add note"
-        class="bg-violet-600 *:stroke-1 *:stroke-white flex justify-center items-center cursor-pointer hover:brightness-110 active:scale-95 transition-all duration-300 text-white rounded-full w-20 h-20 shadow">
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
+        class="bg-violet-600 *:stroke-1 *:stroke-white flex justify-center items-center cursor-pointer hover:brightness-110 active:scale-95 transition-all duration-300 text-white rounded-full w-15 h-15 sm:w-20 sm:h-20 shadow">
+        <svg xmlns="http://www.w3.org/2000/svg" class="max-sm:w-10 max-sm:h-10" width="50" height="50" viewBox="0 0 24 24">
           <path fill="currentColor" d="M11 13H5v-2h6V5h2v6h6v2h-6v6h-2z" />
         </svg>
       </button>
       <div class="space-y-1.5">
-        <h3 class="text-2xl font-semibold">No notes yet</h3>
+        <h3 class="text-xl sm:text-2xl font-semibold">No notes yet</h3>
         <p>Create your first note.</p>
       </div>
     </div>
